# cargo-script-mvs

./: 0000-cargo-script.md  0000-rust-script.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: audit.yml  ci.yml  committed.yml  post-release.yml  pre-commit.yml  rust-next.yml
docs/: README.md
src/: arguments.rs  config.rs  consts.rs  dirs.rs  error.rs  errors.rs  file_assoc.rs  lib.rs  main.rs  manifest.rs  platform.rs  templates.rs  util.rs
src/ops/: mod.rs
src/util/: mod.rs  script.rs
tests/data/: args.rs  cecho.rs  echo.rs  has_edition.rs  hello_world.rs  no_edition.rs  panic.rs  path_dep.rs  print_line.rs  script-default-backtrace.rs  script-merge-manifest.rs  script-override-backtrace.rs  script_line_numbering_preserved.rs  script_line_numbering_preserved_no_main.rs  script_line_numbering_preserved_no_main_no_shebang.rs  script_line_numbering_preserved_no_shebang.rs  test.rs  time.rs
tests/data/path_dep/: Cargo.toml
tests/data/path_dep/src/: lib.rs
tests/data/templates/: boolinate.rs  shout.rs
tests/data/templates/override/: expr.rs
tests/integration/: eval.rs  expr.rs  loop_.rs  main.rs  others.rs  script.rs  util.rs
tests/scripts/: basic-eval.script
tests/tests/: expr.rs  script.rs
