[package]
name = "rust-script"
version = "0.20.0"
description = "Command-line tool to run Rust \"scripts\" which can make use of crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/cargo-script-mvs"
homepage = "https://rust-script.org"
documentation = "https://rust-script.org"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "script"]
edition = "2018"
rust-version = "1.60.0"  # MSRV
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/cargo-script-mvs/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
dirs-next = "2"
env_logger = "0.9"
once_cell = "1"
log = "0.4"
pulldown-cmark = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.10"
tempfile = "3"
toml = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[target.'cfg(unix)'.dependencies]
atty = "0.2"

[dev-dependencies]
snapbox = { version = "0.2.10", features = ["cmd", "path"] }

[profile.release]
lto = true
