[package]
name = "cargo-eval"
version = "0.1.0"
description = "Command-line tool to run Rust \"scripts\" which can make use of crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/cargo-script-mvs"
documentation = "https://github.com/epage/cargo-script-mvs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "script"]
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/cargo-script-mvs/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
vendored-libgit2 = ["cargo/vendored-libgit2"]
vendored-openssl = ["cargo/vendored-openssl"]

[dependencies]
anyhow = "1.0.69"
blake3 = "1.3.3"
cargo = "0.69.1"
cargo-util = "0.2.3"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
dirs-next = "2"
dunce = "1.0.3"
env_logger = "0.10"
home = "0.5.4"
is-terminal = "0.4.7"
log = "0.4"
pulldown-cmark = "0.9"
regex = "1.7.3"
toml = "0.7"

[dev-dependencies]
snapbox = { version = "0.4.7", features = ["cmd", "path"] }

[profile.release]
lto = true
