[package]
name = "cargo-script-mvs"
version = "0.2.0"
description = "Proposed cargo command for treat .rs files as full packages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/cargo-script-mvs"
documentation = "https://github.com/epage/cargo-script-mvs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "script"]
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/cargo-script-mvs/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
vendored-libgit2 = ["cargo/vendored-libgit2"]
vendored-openssl = ["cargo/vendored-openssl"]

[lib]
name = "cargo_eval"

[dependencies]
anyhow = "1.0.71"
blake3 = "1.3.3"
cargo = "0.70.1"
cargo-util = "0.2.3"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
dirs-next = "2"
dunce = "1.0.4"
env_logger = "0.10"
home = "0.5.5"
is-terminal = "0.4.7"
log = "0.4"
pulldown-cmark = "0.9"
regex = "1.8.3"
toml = "0.8"

[dev-dependencies]
snapbox = { version = "0.4.11", features = ["cmd", "path"] }

[profile.release]
lto = true
